# Spring

./: LICENSE  README.md  package-lock.json  package.json  tailwind.config.js
scripts/: build-release.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: auth.rs  instances.rs  launch.rs  mod.rs  skins.rs
src/components/: Button.tsx  InnerSurface.tsx  InstanceCreationModal.tsx  Loader.tsx  Shell.tsx  Sidebar.tsx  SplashScreen.tsx  Toast.tsx  TopBar.tsx
src/components/animate-ui/components/radix/: files.tsx
src/panels/: AddAccountPanel.tsx  AuthScreen.tsx  DiscoverPanel.tsx  HomePanel.tsx  InstanceDetailPanel.tsx  InstancesPanel.tsx  SkinsPanel.tsx
src/store/: useLauncherStore.ts
